add "/api/users/public/{id}"
